<resources>
    <string name="app_name">ClasificadorMusical</string>
    <string name="pick_from_your_songs">¡Cárgala de tu dispositivo!</string>
    <string name="record_from_microphone">¡Grábala con el micrófono!</string>
    <string name="send_audio">Clasificar Audio</string>
    <string name="info_classifier">Carga una canción desde tu dispositivo o grábala con el micrófono.</string>
    <string name="recording_audio">Grabando…</string>
    <string name="btn_txt_stop_recording">Parar la grabación</string>
    <string name="btn_txt_start_recording">Empezar la grabación</string>
    <string name="playing_song">Reproduciendo…</string>

    <string name="status_classified_OK">Success! The song have been classified.</string>
    <string name="status_classified_OK_title">Success!</string>
    <string name="status_classified_OK_subtitle">The song have been classified as:</string>
    <string name="status_classified_KO">Error! The song couldnt be classified. Please try again.</string>
    <string name="status_classified_KO_title">Error!</string>
    <string name="status_classified_KO_subtitle">Song could not be classified. Please, try again.</string>
    <string name="status_send_classify_error">Oops!</string>
    <string name="status_send_classify_error_descr1">An error occurred while classifiyng the audio.</string>
    <string name="status_send_classify_error_descr2">Please check your network connection and try again.</string>
    <string name="status_send_classify_error_rotative">Dont worry, we save your recording so you can classify it after.</string>


    <string name="record_time_desc">Graba audio durante 2\'</string>
    <string name="reclasify_audio">Classify audio again</string>


    <string name="starter_banner_try_app_descr">Try the app without a login </string>
    <string name="starter_banner_try_app_link">here</string>


    <string name="load_song_descr">Load song from your phone</string>
    <string name="record_audio_descr">Record audio from the micro</string>
    <string name="record_title">Record</string>
    <string name="load_audio_title">Load Audio</string>
    <string name="application_brief_description">Clasifica everywhere</string>
    <string name="application_title">Classifikeitor</string>
    <string name="about_mail_label">Contact us on the following mail:</string>
    <string name="about_mail">example@examplemail.com</string>
    <string name="about_social_media_label">Or follow us in our social media</string>
    <string name="info_descr_text">This application recovers audio media from your microphone or by an existing song from your phone to retrieve its EDM genre.</string>


    <string name="acc_album_image">Album image</string>
    <string name="acc_microphone_image">Microphone image</string>
    <string name="acc_application_logo">The application logo</string>
    <string name="acc_discard_audio_icon">Discard audio icon.</string>
    <string name="acc_play_selected_audio_icon">Play selected audio icon</string>
    <string name="acc_pause_audio_icon">Pause audio icon</string>
    <string name="acc_about_twitter_icon">Twitter icon</string>
    <string name="acc_about_youtube_icon">YouTube icon</string>
    <string name="acc_about_facebook_icon">Facebook icon</string>


    <string name="starter_dots_login" translatable="false">*        ·        ·</string>
    <string name="starter_dots_info" translatable="false">·        *        ·</string>
    <string name="starter_dots_about" translatable="false">·        ·        *</string>
    <string name="record_audio_initial_time" translatable="false">00:00</string>
    <string name="record_audio_slash_time" translatable="false">/</string>
    <string name="record_audio_max_time" translatable="false">02:00</string>
    <string name="none_str" translatable="false">NONE</string>
    <string name="btn_google_login" translatable="false">Google Login</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="title_activity_starter" translatable="false">StarterActivity</string>


    <string name="label_history_title">History</string>
    <string name="label_data_history_descr">A history with some data of your captures averages:</string>
    <string name="label_data_history_capture_mode">Capture Mode:</string>
    <string name="label_data_history_genre_avg">Most classified Genre:</string>
    <string name="label_data_history_genre_row">Genre in a row:</string>
    <string name="label_data_history_capture_time">Capture time:</string>
    <string name="label_last_request_title">Your last query</string>
    <string name="label_last_request_genre">Captured genre:</string>
    <string name="label_last_request_time">Captured time:</string>
    <string name="label_last_request_mode">Captured mode:</string>
    <string name="avg_capture_time_default" translatable="false">00:00:00</string>


    <string name="google_oauth_key" translatable="false">242800975591-nfflbh6qsagp24580vs0teia7napflqp.apps.googleusercontent.com</string>
    <string name="lorem_ipsum" translatable="false">lorem ipsum</string>
    <string name="void_text" translatable="false"> </string>
    <string name="title_activity_extract_audio_features">ExtractAudioFeaturesActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_classify">Classificar</string>
    <string name="title_history">Historial</string>
    <string name="title_profile">Perfil</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="dialog_exit_message">Close your session and return to login page</string>
    <string name="dialog_exit_yes">Yes</string>
    <string name="dialog_exit_no">No</string>
    <string name="dialog_exit_title">Do you want to exit?</string>
    <string name="btn_anonymous_login">Try it!</string>


</resources>
