<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.p4r4d0x.genreclassifier.fragments.StarterLoginFragment">

    <LinearLayout
        android:id="@+id/ll_body_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50sp"
        android:paddingEnd="60sp"
        android:paddingStart="60sp"
        android:paddingTop="50sp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_starter_about_mail_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2sp"
            android:layout_marginTop="2sp"
            android:gravity="center"
            android:text="@string/about_mail_label" />

        <TextView
            android:id="@+id/tv_starter_about_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2sp"
            android:layout_marginTop="2sp"
            android:gravity="center"
            android:text="@string/about_mail"
            android:textStyle="normal|bold|italic" />

        <TextView
            android:id="@+id/tv_starter_about_social_media_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2sp"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/about_social_media_label" />

        <LinearLayout
            android:id="@+id/ll_social_media_icons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2sp"
            android:layout_marginTop="2sp"
            android:orientation="horizontal"
            android:paddingEnd="30sp"
            android:paddingStart="30sp">

            <ImageView
                android:id="@+id/iv_fb_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/acc_about_facebook_icon"
                android:src="@drawable/ic_play_circle_filled_white_24dp" />

            <ImageView
                android:id="@+id/iv_yt_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/acc_about_youtube_icon"
                android:src="@drawable/ic_play_circle_filled_white_24dp" />

            <ImageView
                android:id="@+id/iv_tw_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/acc_about_twitter_icon"
                android:src="@drawable/ic_play_circle_filled_white_24dp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
