<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llClasifySong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryMedium"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitleError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center"
                android:padding="20sp"
                android:text="@string/status_send_classify_error"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_description_error"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.60"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="40sp">

            <LinearLayout
                android:id="@+id/ll_error_generic"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_error_description_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/status_send_classify_error_descr1"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_error_description_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/status_send_classify_error_descr2"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_error_rotative"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_error_rotative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/status_send_classify_error_rotative"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_retry_error"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:gravity="center"
            android:padding="30sp">

            <Button
                android:id="@+id/btn_reclassify_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reclasify_audio"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>