<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.p4r4d0x.clasificadormusical.fragments.ClassifierRecordFragment">


    <LinearLayout
        android:id="@+id/llClasifySong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreyBackground"
        android:elevation="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_recordtime_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:elevation="0dp"
            android:orientation="horizontal"
            android:padding="30sp">

            <TextView
                android:id="@+id/tv_time_desc"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/record_time_desc"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pick_audio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.40"
            android:orientation="vertical"
            android:padding="20sp">

            <RelativeLayout
                android:id="@+id/rl_recordingAudio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:visibility="visible"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/tvRecordingAudio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="false"
                    android:gravity="center"
                    android:text="@string/recording_audio" />

                <ProgressBar
                    android:id="@+id/pbRecordingAudio"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:orientation="vertical"
            android:padding="30sp">

            <ProgressBar
                android:id="@+id/pbhStatusAudioRecorded"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCurrentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_audio_initial_time" />

                <TextView
                    android:id="@+id/tvTimeSlash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_audio_slash_time" />

                <TextView
                    android:id="@+id/tvTotalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_audio_max_time" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
