<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLoadSongTheme"
    tools:context="com.p4r4d0x.clasificadormusical.fragments.SelectorLoadSongFragment">

    <LinearLayout
        android:id="@+id/ll_selector_load_song"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            tools:ignore="NestedWeights,UselessLeaf" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_load_song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/load_audio_title" />

            <ImageView
                android:id="@+id/iv_load_song"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/tv_load_song_title"
                android:layout_centerInParent="true"
                android:contentDescription="@string/acc_album_image"
                android:src="@drawable/ic_album_white_48dp" />

            <TextView
                android:id="@+id/tv_load_song_descr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/iv_load_song"
                android:layout_centerInParent="true"
                android:text="@string/load_song_descr" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.4"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf">

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
